Renamed social to refit GA4 expectations

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ $(window).load(function(){
 			$(".showUrlBox").show() &&
 			$("#urlHidden").hide();
 
-		else if ($("#medium").val() === "Social Ad" && $("#socialadownsourcecode").val() === "Yes" && ($("#socialadsource").val() === "Facebook" || $("#socialadsource").val() === "Instagram") )
+		else if ($("#medium").val() === "Paid Social" && $("#socialadownsourcecode").val() === "Yes" && ($("#socialadsource").val() === "Facebook" || $("#socialadsource").val() === "Instagram") )
 	        $("#mediumPPCSearch").hide() &&
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
@@ -171,7 +171,7 @@ $(window).load(function(){
 			$(".showUrlBox").show() &&
 			$("#urlHidden").hide();
 
-		else if ($("#medium").val() === "Social Ad" && $("#socialadownsourcecode").val() === "No" && ($("#socialadsource").val() === "Facebook" || $("#socialadsource").val() === "Instagram") )
+		else if ($("#medium").val() === "Paid Social" && $("#socialadownsourcecode").val() === "No" && ($("#socialadsource").val() === "Facebook" || $("#socialadsource").val() === "Instagram") )
 	        $("#mediumPPCSearch").hide() &&
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
@@ -196,7 +196,7 @@ $(window).load(function(){
 			$(".showUrlBox").show() &&
 			$("#urlHidden").hide();
 
-		else if ($("#medium").val() === "Social Ad" && $("#socialadownsourcecode").val() === "Yes" && $("#socialadsource").val() === "Twitter" )
+		else if ($("#medium").val() === "Paid Social" && $("#socialadownsourcecode").val() === "Yes" && $("#socialadsource").val() === "Twitter" )
 	        $("#mediumPPCSearch").hide() &&
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
@@ -221,7 +221,7 @@ $(window).load(function(){
 			$(".showUrlBox").show() &&
 			$("#urlHidden").hide();
 
-		else if ($("#medium").val() === "Social Ad" && $("#socialadownsourcecode").val() === "No" && $("#socialadsource").val() === "Twitter" )
+		else if ($("#medium").val() === "Paid Social" && $("#socialadownsourcecode").val() === "No" && $("#socialadsource").val() === "Twitter" )
 	        $("#mediumPPCSearch").hide() &&
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
@@ -246,7 +246,7 @@ $(window).load(function(){
 			$(".showUrlBox").show() &&
 			$("#urlHidden").hide();
 
-		else if ($("#medium").val() === "Social Ad" && $("#socialadownsourcecode").val() === "Yes" && $("#socialadsource").val() === "LinkedIn" )
+		else if ($("#medium").val() === "Paid Social" && $("#socialadownsourcecode").val() === "Yes" && $("#socialadsource").val() === "LinkedIn" )
 	        $("#mediumPPCSearch").hide() &&
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
@@ -271,7 +271,7 @@ $(window).load(function(){
 			$(".showUrlBox").show() &&
 			$("#urlHidden").hide();
 
-		else if ($("#medium").val() === "Social Ad" && $("#socialadownsourcecode").val() === "No" && $("#socialadsource").val() === "LinkedIn" )
+		else if ($("#medium").val() === "Paid Social" && $("#socialadownsourcecode").val() === "No" && $("#socialadsource").val() === "LinkedIn" )
 	        $("#mediumPPCSearch").hide() &&
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
@@ -296,7 +296,7 @@ $(window).load(function(){
 			$(".showUrlBox").show() &&
 			$("#urlHidden").hide();
 
-		/* else if ($("#medium").val() === "Social Ad" && $("#socialadownsourcecode").val() === "Yes" && $("#socialadsource").val() === "Youtube" )
+		/* else if ($("#medium").val() === "Paid Social" && $("#socialadownsourcecode").val() === "Yes" && $("#socialadsource").val() === "Youtube" )
 	        $("#mediumPPCSearch").hide() &&
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
@@ -321,7 +321,7 @@ $(window).load(function(){
 			$(".showUrlBox").show() &&
 			$("#urlHidden").hide();
 
-		else if ($("#medium").val() === "Social Ad" && $("#socialadownsourcecode").val() === "No" && $("#socialadsource").val() === "Youtube" )
+		else if ($("#medium").val() === "Paid Social" && $("#socialadownsourcecode").val() === "No" && $("#socialadsource").val() === "Youtube" )
 	        $("#mediumPPCSearch").hide() &&
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
@@ -346,7 +346,7 @@ $(window).load(function(){
 			$(".showUrlBox").show() &&
 			$("#urlHidden").hide();
 			*/
-		else if ($("#medium").val() === "Social Ad" && $("#socialadownsourcecode").val() === "Yes" && $("#socialadsource").val() === "TikTok" )
+		else if ($("#medium").val() === "Paid Social" && $("#socialadownsourcecode").val() === "Yes" && $("#socialadsource").val() === "TikTok" )
 	        $("#mediumPPCSearch").hide() &&
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
@@ -371,7 +371,7 @@ $(window).load(function(){
 			$(".showUrlBox").show() &&
 			$("#urlHidden").hide();
 
-		else if ($("#medium").val() === "Social Ad" && $("#socialadownsourcecode").val() === "No" && $("#socialadsource").val() === "TikTok" )
+		else if ($("#medium").val() === "Paid Social" && $("#socialadownsourcecode").val() === "No" && $("#socialadsource").val() === "TikTok" )
 	        $("#mediumPPCSearch").hide() &&
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
@@ -547,7 +547,7 @@ $(window).load(function(){
 			$(".showUrlBox").show() &&
 			$("#urlHidden").hide();
 
-		else if ($("#medium").val() === "Social Post" && $("#socialpostbrc").val() === "BRC Followers" )
+		else if ($("#medium").val() === "Organic Social" && $("#socialpostbrc").val() === "BRC Followers" )
 	        $("#mediumPPCSearch").hide() &&
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
@@ -567,7 +567,7 @@ $(window).load(function(){
 			$(".showUrlBox").show() &&
 			$("#urlHidden").hide();
 
-		else if ($("#medium").val() === "Social Post" && $("#socialpostbrc").val() === "Not BRC" )
+		else if ($("#medium").val() === "Organic Social" && $("#socialpostbrc").val() === "Not BRC" )
 	        $("#mediumPPCSearch").hide() &&
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
@@ -784,10 +784,11 @@ $(window).load(function(){
 		<p>
 		<label for="medium">What are you making a tracked link for?
         <select name="medium" id="medium">
-		<option value="Banner">Banner</option>
+		<option value="Paid Video">Video ad by BRC</option>
 		<option value="Audio">Audio ad by BRC</option>
-		<option value="Social Ad">Social ad by BRC</option>
-		<option value="Social Post">Social post</option>
+		<option value="Banner">Banner</option>
+		<option value="Paid Social">Social ad by BRC</option>
+		<option value="Organic Social">Organic social</option>
 		<option value="Social Share">Social share button on BRC site</option>
         <option value="Social Button">Social button (e.g. Youtube annotations, Facebook)</option>
 		<option value="Email">Email</option>
@@ -798,7 +799,6 @@ $(window).load(function(){
         <option value="Rocketseed">Rocketseed banners</option>
         <option value="Referral">Referral from a news site etc.</option>
         <option value="Unknown">Something else, not covered by the list above</option>
-				<option value="Paid Video">Video ad by BRC</option>
         </select>
         </label></p>
 
@@ -2092,7 +2092,7 @@ $(window).load(function(){
 				linkContent = "linkcontent";
 				adCreative = adCreative + '_' + linkLocation + '_' + linkContent;
 				break;
-			case "Social Ad":
+			case "Paid Social":
 				source = $('#socialadsource').val();
 				adCreative = $('#socialadlinkcategory').val();
 				if (source == "Facebook" || source == "Instagram") {
@@ -2134,7 +2134,7 @@ $(window).load(function(){
 				var [audience1, audience2, audience3, audience4, audience5] = audiencestring; // to define each audience var, and concatenate the different search results with _s
 				ownSourceCode = $('#socialadownsourcecode').val();
 				break;
-			case "Social Post":
+			case "Organic Social":
 				source = $('#socialpostsource').val();
 				adCreative = $('#socialpostlinkcategory').val();
 				if ($('#socialpostlinkdetails').val()) {
@@ -2292,7 +2292,7 @@ $(window).load(function(){
 			// }
 			}
 
-// For banner and social ads - To repeat the link for each audience filled in, replacing the audience for each one.
+// For multi-link paths (banner, paid social, paid video, audio): To repeat the link for each audience filled in, replacing the audience for each one.
 // NOTE: If variables used here are not defined on page load (i.e. literally on load, or with the default medium selection) then it will mess things up.
 		if (audience1 && !audience2 && !audience3 && !audience4 && !audience5 ) {
 			var html = html.replace(/audience/g,encodeURIComponent(audience1));
