Audio path show/hide custom source codes fixed

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ $(window).load(function(){
 			$(".showUrlBox").show() &&
 			$("#urlHidden").hide();
 
-		else if ($("#medium").val() === "Audio" && $("#videoownsourcecode").val() === "Yes" )
+		else if ($("#medium").val() === "Audio" && $("#audioownsourcecode").val() === "Yes" )
 			$("#mediumPPCSearch").hide() &&
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumSocialAd").hide() &&
