--- a/index.html
+++ b/index.html
@@ -863,17 +863,22 @@ $(window).load(function(){
           <option value="Amazon">Amazon</option>
           <option value="Avocet">Avocet</option>
           <option value="Blis">Blis</option>
+          <option value="Daily Express">Daily Express</option>
+          <option value="Daily Mirror">Daily Mirror</option>
           <option value="FORO">FORO</option>
           <option value="Guardian">Guardian</option>
           <option value="google">Google (formerly Doubleclick/DFP)</option>
           <option value="GumGum">GumGum</option>
+          <option value="iNews">iNews</option>
           <option value="LoopMe">LoopMe</option>
           <option value="MediaMath">MediaMath</option>
           <option value="MiQ">MiQ</option>
           <option value="MMP">MMP</option>
           <option value="Pinterest">Pinterest</option>
           <option value="Playground XYZ">Playground XYZ</option>
+          <option value="Reach">Reach</option>
           <option value="Snapchat">Snapchat</option>
+          <option value="The Times">The Times</option>
           <option value="Telegraph">Telegraph</option>
           <option value="Twitch">Twitch</option>
           <option value="Yahoo">Yahoo</option>
@@ -1030,7 +1035,13 @@ $(window).load(function(){
 	<p>
 		<label for="sourceaudio">What ad network is the ad on?
 			<select name="sourceaudio" id="audiosource">
+				<option value="Acast">Acast</option>
+				<option value="Bauer">Bauer</option>
+				<option value="DAX">DAX</option>
+				<option value="Global">Global</option>
+				<option value="Octave">Octave</option>
 				<option value="Spotify">Spotify</option>
+				<option value="Wireless">Wireless</option>
 			</select>
 		</label>
 	</p>
