New organic + offline + banner options Organic Social > Whatsapp; Offline > Brochure, Flyer; Banner > Teads

--- a/index.html
+++ b/index.html
@@ -878,8 +878,9 @@ $(window).load(function(){
           <option value="Playground XYZ">Playground XYZ</option>
           <option value="Reach">Reach</option>
           <option value="Snapchat">Snapchat</option>
-          <option value="The Times">The Times</option>
+          <option value="Teads">Teads</option>  <!-- here and in video, because you can use Teads for either -->
           <option value="Telegraph">Telegraph</option>
+          <option value="The Times">The Times</option>
           <option value="Twitch">Twitch</option>
           <option value="Yahoo">Yahoo</option>
         </select>
@@ -1570,12 +1571,13 @@ $(window).load(function(){
         <label for="source">What social network is the post on?
         <select name="source" id="socialpostsource">
 		<option value="Facebook">Facebook</option>
-		<option value="Twitter">Twitter</option>
 		<option value="Instagram">Instagram</option>
 		<option value="Instagram Stories">Instagram Stories</option>
-		<option value="Youtube">Youtube</option>
 		<option value="LinkedIn">LinkedIn</option>
 		<option value="TikTok">TikTok</option>
+		<option value="Twitter">Twitter</option>
+		<option value="Whatsapp">Whatsapp</option>
+		<option value="Youtube">Youtube</option>
 		<option value="Unknown">Unknown (e.g. links for celebrities)</option>
 		</select>
         </label>
@@ -1785,10 +1787,12 @@ $(window).load(function(){
         <p>
         <label for="source">What offline advertising is driving this traffic?
         <select name="source" id="offlinesource">
+		<option value="Brochure">Brochure</option>
 		<option value="Direct Mail">Direct mail</option>
 		<option value="Door Drop">Door drop</option>
         <option value="DRTV">DRTV</option>
         <option value="Event">Event (e.g. bake sale, concert)</option>
+        <option value="Flyer">Flyer</option>
         <option value="Inserts">Inserts</option>
         <option value="Out Of Home">Out of home</option>
         <option value="Partially Addressed Mail">Partially Addressed Mail</option>
